--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -6,6 +6,12 @@
     <title>Index</title>
 </head>
 <body>
-    <h1>Index</h1>
+    <h1>Welcome {{username}}</h1>
+    <p>IncomeExpenses : </p>
+    <p>{{incomeExpenses}}</p>
+    <form id="index_form" action="" method="post">
+        <input type="submit" name="logout" value = "logout">
+        <input type="submit" name="add" value = "add entry">
+    </form>
 </body>
 </html>
