--- a/application/templates/signup.html
+++ b/application/templates/signup.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title>Sign up</title>
 </head>
 <body>
-    <h1>Login</h1>
-    <form action='login' method='POST'>
-        <input type='text' name='email' id='email' placeholder='email'></input>
+    <h1>Sign Up</h1>
+    <form action='signup' method='post'>
+        <input type='email' name='email' id='email' placeholder='email'></input>
+        <br>
+        <input type='text' name='username' id='username' placeholder='username'></input>
         <br>
         <input type='password' name='password' id='password' placeholder='password'></input>
         <br>
         <input type='submit' name='submit'></input>
-        <br>
-        <a href="/signup">Sign up</a>
     </form>
 </body>
 </html>
