--- a/application/templates/add.html
+++ b/application/templates/add.html
@@ -4,16 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add</title>
+    <!-- Inclure les liens CSS de Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <a href="/">Index</a>
-    <br>
-    <form id="add_form" action="" method="POST">
-        <input type="text" name="id" value = "id">
-        <input type="text" name="type" value = "type">
-        <input type="date" name="date" value = "date">
+    <div class="container">
+        <h1 class="text-center mt-5">Add entry</h1>
+        <a href="/" class="btn btn-primary mt-3">Index</a>
         <br>
-        <input type="submit" name="submit" value = "submit">
-    </form>
+        <form id="add_form" action="" method="POST" class="mt-4">
+            <div class="form-group">
+                <label for="date">Date</label>
+                <input type="date" class="form-control" name="date" value={{date_of_today}}>
+            </div>
+            <div class="form-group">
+                <label for="type">Type</label>
+                <select class="form-control" name="type" id="type">
+                    <option value="income">Income</option>
+                    <option value="expense">Expense</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="category">Category</label>
+                <input type="text" class="form-control" name="category" value="category">
+            </div>
+            <div class="form-group">
+                <label for="amount">Amount</label>
+                <input type="number" class="form-control" name="amount" value="0">
+            </div>
+            <input type="submit" class="btn btn-primary" name="submit" value="Submit">
+        </form>
+    </div>
+
+    <!-- Inclure les scripts JavaScript de Bootstrap -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
