--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -3,18 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title>Login</title>
+    <!-- Inclure les liens CSS de Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Login</h1>
-    <form action='login' method='POST'>
-        <input type='text' name='email' id='email' placeholder='email'></input>
-        <br>
-        <input type='password' name='password' id='password' placeholder='password'></input>
-        <br>
-        <input type='submit' name='submit'></input>
-        <br>
-        <a href="/signup">Sign up</a>
-    </form>
+    <div class="container">
+        <h1 class="text-center mt-5">Login</h1>
+        <form action="login" method="POST" class="mt-4">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="text" name="email" id="email" class="form-control" placeholder="Email">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" class="form-control" placeholder="Password">
+            </div>
+            <div class="form-check">
+                <input type="checkbox" name="remember_me" id="remember_me" class="form-check-input" checked>
+                <label class="form-check-label" for="remember_me">Remember me</label>
+            </div>
+            <br>
+            <button type="submit" name="submit" class="btn btn-primary">Submit</button>
+            <br>
+            <p class="text-warning">{{ is_logged_in }}</p>
+            <br>
+            <a href="/signup" class="btn btn-link">Sign up</a>
+        </form>
+    </div>
+
+    <!-- Inclure les scripts JavaScript de Bootstrap -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
