--- a/application/templates/signup.html
+++ b/application/templates/signup.html
@@ -3,18 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up</title>
+    <title>Sign Up</title>
+    <!-- Inclure les liens CSS de Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Sign Up</h1>
-    <form action='signup' method='post'>
-        <input type='email' name='email' id='email' placeholder='email'></input>
-        <br>
-        <input type='text' name='username' id='username' placeholder='username'></input>
-        <br>
-        <input type='password' name='password' id='password' placeholder='password'></input>
-        <br>
-        <input type='submit' name='submit'></input>
-    </form>
+    <div class="container">
+        <h1 class="text-center mt-5">Sign Up</h1>
+        <form action="signup" method="POST" class="mt-4">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" class="form-control" placeholder="Email">
+            </div>
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" name="username" id="username" class="form-control" placeholder="Username">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" class="form-control" placeholder="Password">
+            </div>
+            <br>
+            <p class="text-warning">{{ warning_text }}</p>
+            <br>
+            <button type="submit" name="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+
+    <!-- Inclure les scripts JavaScript de Bootstrap -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
